######################################################################
#
# CMakeLists.txt for scimake
#
# $Id: CMakeLists.txt 561 2014-05-21 12:48:40Z jrobcary $
#
# Copyright &copy; 2005-2013 Tech-X Corporation, Boulder, CO
# See LICENSE file for conditions of use.
#
######################################################################

# Only for creating self-contained sci_array
message(STATUS "Adding include subdirectory")
add_subdirectory(include)

