## ############################################################
##
## File:    Makefile.am
##
## Purpose: Purpose: Needed for cmake in an autotools project
##
## $Id: Makefile.am 1160 2011-12-17 14:45:47Z cary $
##
## ############################################################

SUBDIRS = Modules trycompile

EXTRA_DIST = \
  CPackOptions.cmake.in DetermineVisItArchitecture.cmake \
  Makefile.show mklinks.sh Polyswift.cmake README.txt rmcomms.sed \
  SciCChecks.cmake SciComposerBase.cmake SciComposerWithVisit.cmake \
  SciCxxChecks.cmake SciCxxFindVersion.cmake SciDocLogic.cmake \
  SciEngFindVersion.cmake SciFinalize.cmake SciFixDylibs.cmake \
  SciFixDynExec.cmake SciFixInfoPlist.cmake SciFortranChecks.cmake \
  SciFortranDouble.cmake SciFortranFindVersion.cmake \
  SciFuncsMacros.cmake SciGetDepsFromInstall.cmake SciInit.cmake \
  SciInstallMpi.cmake SciInstallPython.cmake SciMpiLauncher.cmake \
  SciSeparateLibs.cmake SciSvnInfo.cmake SciWinFlags.cmake \
  Vorpal.cmake xvfb-run.sh

