## ############################################################
##
## File:    Makefile.am
##
## Purpose: Purpose: Needed for cmake in an autotools project
##
## $Id: Makefile.am 58 2012-09-15 13:43:53Z jrobcary $
##
## ############################################################

SUBDIRS =

EXTRA_DIST = \
  checkCompilerRTTI.cxx gendeclstatics.cxx modulesrcfile.f90 \
  mpi_mod.f90 mpi_h.cxx stdabsdbl.cxx

